# tree-sitter-eunoia

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  eunoia.bnf  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-eunoia.h  tree-sitter-eunoia.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_eunoia/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterEunoiaTests/: TreeSitterEunoiaTests.swift
src/: grammar.json  node-types.json  parser.c
