[package]
name = "tree-sitter-eunoia"
description = "Parser for the Eunoia logical framework"
version = "0.1.0"
authors = ["Ciarán Dunne <ciaran.dunne@inria.fr>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "eunoia"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/ciaran-matthew-dunne/tree-sitter-eunoia"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.1"
