[package]
name = "tree-sitter-eunoia"
description = "Tree-sitter parser for the Eunoia logical framework"
version = "0.1.0"
authors = ["Ciaran Dunne <ciaran.dunne@inria.fr>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "eunoia"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/ciaran-matthew-dunne/tree-sitter-eunoia"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.7"
