[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-eunoia"
description = "Tree-sitter parser for the Eunoia logical framework"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "eunoia"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Ciaran Dunne", email = "ciaran.dunne@inria.fr" }]
requires-python = ">=3.9"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/ciaran-matthew-dunne/tree-sitter-eunoia"

[project.optional-dependencies]
core = ["tree-sitter~=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
